# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.fleet/: run.json
config/: config.dev.yml  config.prod.yml  config.test.yml
migrations/: 20221015042716_create_susbcriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
